...
            "Bookmark"
        case .copyLink:
            "Copy Link"
        case .shareLink:
            "Share Link"
        case .viewDetails:
            "View Details"
        case .quotedRepost:
            "Quoted Repost"
        }
    }

    var systemName: String {
        switch self {
        case .report:
...
